QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
------------------------------------------------------

ChangeLog


0.9.8  2022-12-28  An End-of-Year'22 Release.

- Just bumping into the next develop cycle/season.


0.9.7  2022-10-03  An Early-Autumn'22 Release.

- Bumped version number into the next release season.


0.9.6  2022-04-02  A Spring'22 Release.

- Main application icon is now presented in scalable format (SVG).

- Migrated command line parsing to QCommandLineParser/Option
  (Qt >= 5.2)


0.9.5  2022-01-09  A Winter'22 Release.

- Dropped autotools (autoconf, automake, etc.) build system.


0.9.4  2021-07-04  An Early-Summer'21 Release.

- All builds default to Qt6 (Qt >= 6.1) where available.

- CMake is now the official build system.


0.9.3  2021-05-11  A Spring'21 Release.

- All packaging builds switching to CMake.


0.9.2  2021-03-14  An End-of-Winter'21 Release.

- Bumped version micro/dot number into the next develop cycle.


0.9.1  2021-02-07  A Winter'21 Release.

- Early preparations for the New Year develop(ment) cycle.


0.9.0  2020-12-17  A Winter'20 Release.

- Early fixing to build for Qt >= 6.0.0 and comply
  with C++17 standard.


0.6.3  2020-07-31  A Summer'20 Release.

- Early fixing to build for Qt >= 5.15.0.


0.6.2  2020-03-24  A Spring'20 Release.

- A scalable (.svg) icon version has been added.

- Make man page compression reproducible (after request
  by Jelle van der Waa, while on the Vee-Ones, thanks).

- Bumped copyright headers into the New Year (2020).


0.6.1  2019-12-22  The Winter'19 Release.

- Second attempt to fix the yet non-official though
  CMake build configuration.

- Provide a default IPv6 address, and feedback to the user
  in the options dialog (after a merge request by plcl aka.
  Pedro López-Cabanillas, thanks).

- When using ./configure --with-qt=... it is also necessary
  to adjust the PKG_CONFIG_PATH environment variable (also
  by plcl aka. Pedro López-Cabanillas).

